--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
 <body itemscope="itemscope"
 	class="home page-template-default page page-id-125 theme-astra woocommerce-js exclusive-addons-elementor ast-single-post ast-mobile-inherit-site-logo ast-replace-site-logo-transparent ast-inherit-site-logo-transparent ast-theme-transparent-header ast-hfb-header ast-page-builder-template ast-no-sidebar astra-3.9.2 ast-full-width-primary-header elementor-default elementor-kit-475 elementor-page elementor-page-125 ast-desktop e--ua-blink e--ua-chrome e--ua-webkit"
 	style="" data-elementor-device-mode="desktop">
-	<div id="root"></div>
+	
 	<div class="hfeed site" id="page">
 		<header
 			class="site-header ast-primary-submenu-animation-fade header-main-layout-1 ast-primary-menu-enabled ast-hide-custom-menu-mobile ast-builder-menu-toggle-icon ast-mobile-header-inline"
@@ -167,6 +167,10 @@
 
 				.hidden {
 					display: none;
+				}
+				.App > button{
+					margin-right: auto;
+					margin-left: auto;
 				}
 			</style>
 
@@ -244,7 +248,7 @@
 																<span id="totalSupply">0</span>/<span
 																	id="maxSupply">1000</span> NFTs
 																<Br>
-																1 TropicalSloth costs <span id="mintCost">0.65</span> BNB
+																1 TropicalSloth costs <span id="mintCost">0.65</span> ETH
 															</h3>
 														</div>
 													</div>
@@ -286,6 +290,7 @@
 																	<button id="connect_btn" class="wht text-center"
 																		type="button">Connect
 																		Wallet</button>
+																	<div id="root"></div>
 																</div>
 															</div>
 														</div>
